--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@ function showInstallButton() {
                             <button class="btn btn-primary" onclick="handlePhotoChoice('photo1')">
                                 <span>📁 Choisir</span>
                             </button>
-                            <button class="btn btn-primary" onclick="openCamera('photo1')">
-                                <span>📸 Prendre</span>
-                            </button>
+                           // <button class="btn btn-primary" onclick="openCamera('photo1')">
+                           //     <span>📸 Prendre</span>
+                           // </button>
                         </div>
                         <input type="file" id="photo1Input" accept="image/*" onchange="previewPhoto(this, 'photo1Preview')" hidden>
                         <img id="photo1Preview" class="photo-preview">
@@ -397,9 +397,9 @@ function showInstallButton() {
                             <button class="btn btn-primary" onclick="handlePhotoChoice('photo2')">
                                 <span>📁 Choisir</span>
                             </button>
-                            <button class="btn btn-primary" onclick="openCamera('photo2')">
-                                <span>📸 Prendre</span>
-                            </button>
+                            //<button class="btn btn-primary" onclick="openCamera('photo2')">
+                            //    <span>📸 Prendre</span>
+                           // </button>
                         </div>
                         <input type="file" id="photo2Input" accept="image/*" onchange="previewPhoto(this, 'photo2Preview')" hidden>
                         <img id="photo2Preview" class="photo-preview">
