--- a/index.html
+++ b/index.html
@@ -410,6 +410,20 @@
         image2: { x: 250, y: 100, width: 200, height: 150 }
     };
 
+  // FONCTIONS UTILITAIRES
+        async function loadPDFLib() {
+            return new Promise((resolve, reject) => {
+                if (window.PDFLib) return resolve(window.PDFLib);
+                
+                const script = document.createElement('script');
+                script.src = 'https://unpkg.com/pdf-lib@1.16.0/dist/pdf-lib.min.js';
+                script.onload = () => resolve(window.PDFLib);
+                script.onerror = () => reject(new Error("Échec du chargement de PDF-lib"));
+                document.head.appendChild(script);
+            });
+        }
+
+
     // FONCTION DE TÉLÉCHARGEMENT UNIVERSEL
     function downloadPDF(pdfBytes, filename) {
         // 1. Création du Blob PDF
